--- a/template/freshservice/connector-apps/your_first_connector_app/manifest.json
+++ b/template/freshservice/connector-apps/your_first_connector_app/manifest.json
@@ -23,7 +23,10 @@
         "updateConnection": {},
         "configureEndpoints": {},
         "fetchEndpoints": {},
-        "triggerEndpoint": {}
+        "triggerEndpoint": {},
+        "fetchAlertConfig": {},
+        "updateAlertConfig": {},
+        "fetchAgents": {}
       },
       "functions": {
         "getJwtToken": {
