--- a/template/freshservice/connector-apps/workato_background_connector/manifest.json
+++ b/template/freshservice/connector-apps/workato_background_connector/manifest.json
@@ -17,7 +17,10 @@
         "startRecipe": {},
         "stopRecipe": {},
         "updateConnection": {},
-        "triggerEndpoint": {}
+        "triggerEndpoint": {},
+        "fetchAlertConfig": {},
+        "updateAlertConfig": {},
+        "fetchAgents": {}
       },
       "functions": {
         "getJwtToken": {
