--- a/template/freshservice/connector-apps/workato_background_connector/manifest.json
+++ b/template/freshservice/connector-apps/workato_background_connector/manifest.json
@@ -43,6 +43,9 @@
         }
       },
       "events": {
+        "onAppInstall": {
+          "handler": "onAppInstallCallback"
+        },
         "onAppUninstall": {
           "handler": "onAppUninstallCallback"
         }
@@ -50,8 +53,8 @@
     }
   },
   "engines": {
-    "node": "18.17.1",
-    "fdk": "9.0.7"
+    "node": "18.20.4",
+    "fdk": "9.2.0"
   },
   "dependencies": {
     "jsonwebtoken": "8.1.1"
